# randoms

./: .gitattributes  README.md  pyproject.toml
data/MSL_SMAP/: labeled_anomalies.csv
data/MSL_SMAP/test/: A-1.npy  A-2.npy  A-3.npy  A-4.npy  A-5.npy  A-6.npy  A-7.npy  A-8.npy  A-9.npy  B-1.npy  C-1.npy  C-2.npy  D-1.npy  D-11.npy  D-12.npy  D-13.npy  D-14.npy  D-15.npy  D-16.npy  D-2.npy  D-3.npy  D-4.npy  D-5.npy  D-6.npy  D-7.npy  D-8.npy  D-9.npy  E-1.npy  E-10.npy  E-11.npy  E-12.npy  E-13.npy  E-2.npy  E-3.npy  E-4.npy  E-5.npy  E-6.npy  E-7.npy  E-8.npy  E-9.npy  (+41 more)
data/MSL_SMAP/train/: A-1.npy  A-2.npy  A-3.npy  A-4.npy  A-5.npy  A-6.npy  A-7.npy  A-8.npy  A-9.npy  B-1.npy  C-1.npy  C-2.npy  D-1.npy  D-11.npy  D-12.npy  D-13.npy  D-14.npy  D-15.npy  D-16.npy  D-2.npy  D-3.npy  D-4.npy  D-5.npy  D-6.npy  D-7.npy  D-8.npy  D-9.npy  E-1.npy  E-10.npy  E-11.npy  E-12.npy  E-13.npy  E-2.npy  E-3.npy  E-4.npy  E-5.npy  E-6.npy  E-7.npy  E-8.npy  E-9.npy  (+42 more)
data/PSM/: LICENSE  test.csv  test_label.csv  train.csv
data/SMD/: LICENSE
data/SMD/interpretation_label/: machine-1-1.txt  machine-1-2.txt  machine-1-3.txt  machine-1-4.txt  machine-1-5.txt  machine-1-6.txt  machine-1-7.txt  machine-1-8.txt  machine-2-1.txt  machine-2-2.txt  machine-2-3.txt  machine-2-4.txt  machine-2-5.txt  machine-2-6.txt  machine-2-7.txt  machine-2-8.txt  machine-2-9.txt  (+11 more)
notebooks/: 00 - criar flow.ipynb  00 - exemplo-completo.ipynb  00 - testes - pyod.ipynb  01 - LOF.ipynb
randoms/: main.py
randoms/data/: __init__.py  generic.py
randoms/flows/: realnvp.py
tests/: test_randoms.py
(+84 files in other folders)
