[tool.poetry]
name = "randoms"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
scikit-learn = "^1.1.0"
jupyterlab = "^3.4.2"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pyod = "^1.0.4"
combo = "^0.1.3"
xgboost = "^1.6.2"
nflows = "^0.14"
normflows = "^1.4"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
